--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
 		"@nextui-org/theme": "2.2.11",
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
+		"@tanstack/react-query": "^5.59.16",
+		"axios": "^1.7.7",
 		"clsx": "2.1.1",
 		"dayjs": "^1.11.13",
 		"framer-motion": "~11.1.1",
