--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"dayjs": "^1.11.13",
 		"framer-motion": "~11.1.1",
 		"intl-messageformat": "^10.5.0",
+		"jwt-decode": "^4.0.0",
 		"next": "^14.2.15",
 		"next-themes": "^0.2.1",
 		"punycode": "^2.3.1",
